messed up index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+adfgafaf
 <!--====Header Starts====-->
 
 	<div class="header">
@@ -18,7 +18,7 @@
 		
 		</div>
 
-	</div>
+	</div>asdfadfga
 
 <!--======Header Ends====-->
 
