--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-adfgafaf
-<!--====Header Starts====-->
+
+<!--========================Header Starts======================================-->
 
 	<div class="header">
 		
@@ -18,11 +18,11 @@ adfgafaf
 		
 		</div>
 
-	</div>asdfadfga
+	</div>
 
-<!--======Header Ends====-->
+<!--==========================Header Ends======================================-->
 
-<!--==========Navigatin starts=========-->
+<!--==============================Navigatin starts=============================-->
 
 	<div class="navigation">
 		<ul>
@@ -32,9 +32,9 @@ adfgafaf
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
 	</div>
-<!--==========Navigatin Ends=========-->
+<!--==============================Navigatin Ends=============================-->
 
-<!--==========Slider Starts==========-->
+<!--==============================Slider Starts==============================-->
 
 		<div id="slider">
 			<ul>				
@@ -44,21 +44,21 @@ adfgafaf
 			</ul>
 		</div>
 
-<!--==========Slider   Ends==========-->
+<!--==============================Slider   Ends==============================-->
 
 
-<!--==========Footer Starts==========-->
+<!--==============================Footer Starts==============================-->
 
 <div class="footer">
 
 <p>&copy; 2014 by XYZ </p>
 
-<!--==========Footer Ends==========-->
+<!--==============================Footer Ends==============================-->
 </div>
 
 
 
-<!--======Scripts Starts=========-->
+<!--==========================Scripts Starts=============================-->
 	<script type="text/javascript" src="js/jquery.js"></script>	
 	<script type="text/javascript" src="js/easySlider1.7.js"></script>
 	<script type="text/javascript">
@@ -69,7 +69,7 @@ adfgafaf
 			});
 		});	
 	</script>
-<!--======Scripts Ends=========-->
+<!--==========================Scripts Ends=============================-->
 
 </body>
 </html>
